@@ -12,3 +12,4 @@ Changelog
 07-04-2025 ... 0.3.1.0 ... Principal Variation Search ........... (50.1 +/- 24.4) , (8 + 0.08), (SPRT, 642), (Local)
 07-05-2025 ... 0.3.1.1 ... Makefile Workaround
 07-08-2025 ... 0.3.1.2 ... Refactors and Cleanups; Prepare for TT and Multithread
+07-10-2025 ... 0.3.1.3 ... Added Minimal UCI Option, Prevents timeouts in low tc and limited threads
